# scrapyard

./: makefile
addon/: backend.js  bookmarking.js  import.js  manifest.json  plugin_files_shelf.js  plugin_ishell.js  storage.js  storage_bookmarks.js  storage_idb.js  utils_browser.js
addon/savepage/: background.js  content-frame.js  content.js
addon/ui/options/: options_capture.html  options_capture.js
backend/: pyproject.toml  versions.txt
backend/cli-installer/: install.sh  readme.txt
backend/cli-installer/scrapyard_backend/: installer.py
backend/manifests/: debug_manifest.json.chrome
